[package]
name = "secure-types"
version = "0.1.31"
authors = ["Michalis Molfetas"]
edition = "2024"
description = "Secure data types that protect sensitive data in memory via locking, encryption, and zeroization."
repository = "https://github.com/greekfetacheese/secure-types"
readme = "readme.md"
keywords = ["security", "secure", "memory", "zeroize", "no_std"]
categories = ["memory-management", "no-std", "security"]
license = "MIT OR Apache-2.0"

[dependencies.memsec]
version = "0.7.0"
optional = true

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }

[dependencies.zeroize]
version = "1.8.1"

[dependencies.thiserror]
version = "2"

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.60.2", default-features = false, features = [
   "Win32_System_SystemInformation",
   "Win32_Security_Cryptography",
] }

[dev-dependencies.serde_json]
version = "1"

[dev-dependencies.serde]
version = "1"
features = ["derive"]

[features]
default = ["std"]
std = ["memsec"]
serde = ["dep:serde"]
no_std = []