[package]
name = "secure-types"
version = "0.2.63"
authors = ["Michalis Molfetas"]
edition = "2024"
description = "Secure data types that protect sensitive data in memory via locking and zeroization."
repository = "https://github.com/greekfetacheese/secure-types"
readme = "readme.md"
keywords = ["security", "secure", "memory", "zeroize", "no_std"]
categories = ["memory-management", "no-std", "security"]
license = "MIT OR Apache-2.0"

[dependencies.memsec]
version = "0.7.0"
features = ["alloc_ext"]
optional = true

[target.'cfg(unix)'.dependencies]
libc = { version = "0.2" }

[dependencies.zeroize]
version = "1.8.2"

[dependencies.thiserror]
version = "2"
optional = true

[dependencies.serde]
version = "1"
features = ["derive"]
optional = true


[dev-dependencies.serde_json]
version = "1"

[dev-dependencies.serde]
version = "1"
features = ["derive"]

[features]
default = ["use_os"]
use_os = ["memsec", "dep:thiserror"]
serde = ["dep:serde"]

# no_std + alloc mode: zeroization only, no OS memory locking.
# When `use_os` is absent, the crate automatically builds in no_std mode.
no_os = []